--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -103,13 +103,14 @@ ion-menu {
 
     .image_login_perso {
         margin-top: 30px;
+        margin-bottom: 30px;
         width: 100%;
         height: 220px;
         display: flex;
         justify-content: center;
         align-items: center;
         img {
-            height: 220px;
+            height: 210px;
             border-radius: 110px;
         }
     }
