--- a/src/pages/mention/mention.scss
+++ b/src/pages/mention/mention.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700|Lobster+Two:400,700');
+page-mention {
+
+    @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700|Lobster+Two:400,700');
 
 .input-cover {
   position: static;
 }
-
-page-mention-legales {
   .mention_legales {
     margin-top: 25px !important;
     background: #F8FAFF !important;
