update blank pages

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
   
         <hr style=" background-color: #a37f93; border: 1px solid #a37f93;
       border-radius: 1px; margin-left: 28%; margin-right: 28%;">
-          <a href=""><p>Page d'accueil</p></a>
+          <a href=""><p>Mentions légales</p></a>
           <a href=""><p>Promotions</p></a>
           <a href=""><p>Bons plans</p></a>
           <a href=""><p>Blog</p></a>
