--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -88,6 +88,11 @@ ion-icon {
     }
     
 }
+
+.disable-hover.alert-button.alert-button-ios.alert-button-default.alert-button-default-ios {
+    margin-bottom: 27px;
+}
+
 .disable-hover.bar-button.bar-button-ios.bar-button-default.bar-button-default-ios {
     padding-right: 5px;
 }
