--- a/src/pages/panier/panier.scss
+++ b/src/pages/panier/panier.scss
@@ -1,3 +1,32 @@
 page-panier {
-
+    
+    nav {
+        height: 30px;
+        width: 100%;
+        ul {
+          padding: 0;
+          margin: 0;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          li {
+            list-style-type:none;
+            a {
+              height: 30px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              cursor: pointer;
+              color: #92657B !important;
+              .material-icons {
+                position: relative;
+                font-size: 20px !important;
+              }
+              span {
+                font-size: 16px !important;
+              }
+            }
+          }
+        }
+      }
 }
