--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,8 +12,8 @@
           <a (click)="goPromotion()"><p>Promotions</p></a>
           <a (click)="goBon()"><p>Bons plans</p></a>
           <a (click)="goBlog()"><p>Blog</p></a>
-          <a href=""><p>Evaluez nous</p></a>
-          <a href=""><p style="margin-bottom: 30px;">Contacts</p></a>
+          <a (click)="eval()"><p>Evaluez nous</p></a>
+          <a (click)="goContact()"><p style="margin-bottom: 30px;">Contacts</p></a>
         <hr style=" background-color: #a37f93; border: 1px solid #a37f93;
       border-radius: 1px; margin-left: 28%; margin-right: 28%;">
       <a href=""><p>Paramètres</p></a>
